// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker Component renders correctly with default values 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  height: 38px;
  padding-left: calc(4px * 2);
  padding-right: calc(4px * 2);
}

.emotion-5>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="components-base-control classy-field__control classy-field__control--input classy-field__control--time-picker components-combobox-control emotion-0 emotion-1"
  >
    <div
      class="components-base-control__field emotion-2 emotion-3"
    >
      <div
        class="components-combobox-control__suggestions-container"
        tabindex="-1"
      >
        <div
          class="components-flex emotion-4 emotion-5 emotion-6"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item components-flex-block emotion-7 emotion-6"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="components-form-token-suggestions-howto-combobox-control-0"
              aria-expanded="false"
              autocomplete="off"
              class="components-combobox-control__input components-form-token-field__input"
              id="components-form-token-input-combobox-control-0"
              role="combobox"
              size="9"
              type="text"
              value="10:00 am"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker Component renders correctly with highlight false 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  height: 38px;
  padding-left: calc(4px * 2);
  padding-right: calc(4px * 2);
}

.emotion-5>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="components-base-control classy-field__control classy-field__control--input classy-field__control--time-picker components-combobox-control emotion-0 emotion-1"
  >
    <div
      class="components-base-control__field emotion-2 emotion-3"
    >
      <div
        class="components-combobox-control__suggestions-container"
        tabindex="-1"
      >
        <div
          class="components-flex emotion-4 emotion-5 emotion-6"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item components-flex-block emotion-7 emotion-6"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="components-form-token-suggestions-howto-combobox-control-5"
              aria-expanded="false"
              autocomplete="off"
              class="components-combobox-control__input components-form-token-field__input"
              id="components-form-token-input-combobox-control-5"
              role="combobox"
              size="9"
              type="text"
              value="10:00 am"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker Component renders correctly with highlight true 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  height: 38px;
  padding-left: calc(4px * 2);
  padding-right: calc(4px * 2);
}

.emotion-5>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="components-base-control classy-field__control classy-field__control--input classy-field__control--time-picker components-combobox-control emotion-0 emotion-1"
  >
    <div
      class="components-base-control__field emotion-2 emotion-3"
    >
      <div
        class="components-combobox-control__suggestions-container"
        tabindex="-1"
      >
        <div
          class="components-flex emotion-4 emotion-5 emotion-6"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item components-flex-block emotion-7 emotion-6"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="components-form-token-suggestions-howto-combobox-control-4"
              aria-expanded="false"
              autocomplete="off"
              class="components-combobox-control__input components-form-token-field__input"
              id="components-form-token-input-combobox-control-4"
              role="combobox"
              size="9"
              type="text"
              value="10:00 am"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker Component renders correctly with no endDate, startDate eq currentDate 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  height: 38px;
  padding-left: calc(4px * 2);
  padding-right: calc(4px * 2);
}

.emotion-5>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="components-base-control classy-field__control classy-field__control--input classy-field__control--time-picker components-combobox-control emotion-0 emotion-1"
  >
    <div
      class="components-base-control__field emotion-2 emotion-3"
    >
      <div
        class="components-combobox-control__suggestions-container"
        tabindex="-1"
      >
        <div
          class="components-flex emotion-4 emotion-5 emotion-6"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item components-flex-block emotion-7 emotion-6"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="components-form-token-suggestions-howto-combobox-control-3"
              aria-expanded="false"
              autocomplete="off"
              class="components-combobox-control__input components-form-token-field__input"
              id="components-form-token-input-combobox-control-3"
              role="combobox"
              size="9"
              type="text"
              value="10:00 am"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker Component renders correctly with no startDate, endDate eq currentDate 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  height: 38px;
  padding-left: calc(4px * 2);
  padding-right: calc(4px * 2);
}

.emotion-5>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="components-base-control classy-field__control classy-field__control--input classy-field__control--time-picker components-combobox-control emotion-0 emotion-1"
  >
    <div
      class="components-base-control__field emotion-2 emotion-3"
    >
      <div
        class="components-combobox-control__suggestions-container"
        tabindex="-1"
      >
        <div
          class="components-flex emotion-4 emotion-5 emotion-6"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item components-flex-block emotion-7 emotion-6"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="components-form-token-suggestions-howto-combobox-control-2"
              aria-expanded="false"
              autocomplete="off"
              class="components-combobox-control__input components-form-token-field__input"
              id="components-form-token-input-combobox-control-2"
              role="combobox"
              size="9"
              type="text"
              value="10:00 am"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker Component renders correctly with same startDate, endDate, currentDate 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  height: 38px;
  padding-left: calc(4px * 2);
  padding-right: calc(4px * 2);
}

.emotion-5>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="components-base-control classy-field__control classy-field__control--input classy-field__control--time-picker components-combobox-control emotion-0 emotion-1"
  >
    <div
      class="components-base-control__field emotion-2 emotion-3"
    >
      <div
        class="components-combobox-control__suggestions-container"
        tabindex="-1"
      >
        <div
          class="components-flex emotion-4 emotion-5 emotion-6"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item components-flex-block emotion-7 emotion-6"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="components-form-token-suggestions-howto-combobox-control-1"
              aria-expanded="false"
              autocomplete="off"
              class="components-combobox-control__input components-form-token-field__input"
              id="components-form-token-input-combobox-control-1"
              role="combobox"
              size="9"
              type="text"
              value="10:00 am"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
